# midterm

devel/: .catkin  .rosinstall  setup.sh
devel/lib/midtermpkg/: call_4turtle  wall_following
devel/lib/pkgconfig/: agv_robot.pc  midtermpkg.pc  mobile_robot.pc
devel/share/agv_robot/cmake/: agv_robotConfig.cmake
devel/share/midtermpkg/cmake/: midtermpkgConfig.cmake
devel/share/mobile_robot/cmake/: mobile_robotConfig.cmake
src/agv_robot/: CMakeLists.txt  package.xml
src/agv_robot/launch/: agv_robot.launch
src/agv_robot/urdf/: agv_robot.rviz  agv_robot.urdf
src/midtermpkg/: CMakeLists.txt  package.xml
src/midtermpkg/src/: call_4turtle.cpp  wall_following.cpp
src/mobile_robot/launch/: mobile_robot.launch
src/mobile_robot/urdf/: mobile_robot.urdf  urdf.rviz
